Cast modifier on object with vertex duplication does not trigger redraw #32144

Closed
opened 2012-07-19 12:48:49 +02:00 by Thomas Beck · 5 comments
Member

%%%Specs i7, Linux, 64, Win 32, 8Gb nVidia

Hi guys,

When I'm using a cast modifier on an object that got vertex duplication turned on and change his values, I don't see a redraw event happening in cycles real time view. I see it changing in OpenGl mode, but not in the rendered window.

To reproduce:

Look at the supplied blend. Change the factor value cast modifier and have a realtime render window open. When you're changing the value, you can see the changes in the OpenGl preview, but not in the render view.

Greetings, Thomas Beck%%%

%%%Specs i7, Linux, 64, Win 32, 8Gb nVidia Hi guys, When I'm using a cast modifier on an object that got vertex duplication turned on and change his values, I don't see a redraw event happening in cycles real time view. I see it changing in OpenGl mode, but not in the rendered window. To reproduce: Look at the supplied blend. Change the factor value cast modifier and have a realtime render window open. When you're changing the value, you can see the changes in the OpenGl preview, but not in the render view. Greetings, Thomas Beck%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Forgot to add the revision: 49014 ... buildbot build from today%%%

%%%Forgot to add the revision: 49014 ... buildbot build from today%%%

%%%The real-time render window is never updated when vertex, face or group duplication is turned on. I tested array, subsurf, cast and displace modifiers. It works well with no duplication or frame duplication. Seems to be a cycles problem, maybe a caching problem?%%%

%%%The real-time render window is never updated when vertex, face or group duplication is turned on. I tested array, subsurf, cast and displace modifiers. It works well with no duplication or frame duplication. Seems to be a cycles problem, maybe a caching problem?%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32144
No description provided.