Fix #32144: cycles viewport missing update with dupliverts. Ideally this would be fixed in the dependency graph so it gives a proper signal but that would need a bigger refactor.